monitoring/controllers/open-telemetry/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: carbon-metrics
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: telemetry
      namespace: gateways
      sectionName: carbon
  rules:
    - backendRefs:
        - name: otel-gateway-opentelemetry-collector
          port: 2003
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: otlp-metrics-grpc
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: telemetry
      namespace: gateways
      sectionName: otlp-grpc
  hostnames:
    - otel.home.dokocloud.net
  rules:
    - matches:
        - method:
            type: Exact
            service: opentelemetry.proto.collector.metrics.v1.MetricsService
      backendRefs:
        - name: otel-gateway-opentelemetry-collector
          port: 14317
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: otlp-metrics-http
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: telemetry
      namespace: gateways
      sectionName: otlp-http
  hostnames:
    - otel.home.dokocloud.net
  rules:
    - matches:
        - path:
            type: Exact
            value: /v1/metrics
      backendRefs:
        - name: otel-gateway-opentelemetry-collector
          port: 14318
